<resources>
    <string name="app_name">Lab3G30</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_timeSLot">Edit Time Slot</string>
    <string name="show_timeSlot">Time Slot details</string>
    <string name="show_profile">Profile info</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_show_time_slots">Time Slots</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="option_camera">From Camera</string>
    <string name="option_gallery">From Gallery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title">Title</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="location">Location</string>
    <string name="action_1">See details</string>
    <string name="action_2">Edit</string>
    <string name="empty_message">No time slots available</string>
    <string name="profile">My profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>